Finalized mutable list implementation.